src/Dependencies/libtase2-2.3.0/src/inc/tase2_common.h

typedef enum {
    TASE2_NO_TIMESTAMP = 0,
    TASE2_TIMESTAMP,
    TASE2_TIMESTAMP_EXTENDED
} Tase2_TimeStampClass;
typedef enum {
    TASE2_CLIENT_ERROR_OK = 0,
    TASE2_CLIENT_ERROR_FAILED,
    TASE2_CLIENT_ERROR_TIMEOUT,
    TASE2_CLIENT_ERROR_ACCESS_DENIED,
    TASE2_CLIENT_ERROR_TEMPORARILY_UNAVAILABLE,
    TASE2_CLIENT_ERROR_INVALID_ARGUMENT,
    TASE2_CLIENT_ERROR_INVALID_RETURN_VALUE,
    TASE2_CLIENT_ERROR_OTHER,
    TASE2_CLIENT_ERROR_OBJECT_NOT_EXISTING,
    TASE2_CLIENT_ERROR_OBJECT_EXISTS
} Tase2_ClientError;
typedef enum {
    TASE2_VALUE_TYPE_STATE = 0,
    TASE2_VALUE_TYPE_STATE_SUPPLEMENTAL,
    TASE2_VALUE_TYPE_DISCRETE,
    TASE2_VALUE_TYPE_REAL,
    TASE2_VALUE_TYPE_SINGLE_EVENT,
    TASE2_VALUE_TYPE_PACKED_EVENT,
    TASE2_VALUE_TYPE_ERROR = 99,
    TASE2_VALUE_TYPE_UNKNOWN = 100,
    TASE2_VALUE_TYPE_STATE_OR_STATE_SUPPLEMENTAL = 101,
    TASE2_VALUE_TYPE_STATE_OR_DISCRETE = 102,
} Tase2_PointValueType;
typedef struct sTase2_PointValue* Tase2_PointValue;
TASE2_API Tase2_PointValueType
Tase2_PointValue_getType(Tase2_PointValue self);
TASE2_API Tase2_ClientError
Tase2_PointValue_getError(Tase2_PointValue self);
TASE2_API void
Tase2_PointValue_setType(Tase2_PointValue self, Tase2_PointValueType type);
TASE2_API void
Tase2_PointValue_destroy(Tase2_PointValue self);
typedef uint8_t Tase2_DataFlags;
typedef uint8_t Tase2_DataState;
typedef uint8_t Tase2_DataStateSupplemental;
typedef enum {
    TASE2_POINT_VALUE_ERROR_OK = 0,
    TASE2_POINT_VALUE_ERROR_WRONG_TYPE = 1
} Tase2_PointValueError;
TASE2_API Tase2_PointValue
Tase2_PointValue_getCopy(Tase2_PointValue self);
TASE2_API Tase2_PointValue
Tase2_PointValue_createReal(float value);
TASE2_API Tase2_PointValue
Tase2_PointValue_createDiscrete(int32_t value);
TASE2_API Tase2_PointValue
Tase2_PointValue_createState(Tase2_DataState value);
TASE2_API Tase2_PointValue
Tase2_PointValue_createStateSupplemental(Tase2_DataStateSupplemental value);
TASE2_API Tase2_PointValue
Tase2_PointValue_createRealQ(float value, Tase2_DataFlags flags);
TASE2_API Tase2_PointValue
Tase2_PointValue_createDiscreteQ(int32_t value, Tase2_DataFlags flags);
TASE2_API Tase2_PointValue
Tase2_PointValue_createStateQ(Tase2_DataState value, Tase2_DataFlags flags);
TASE2_API Tase2_PointValue
Tase2_PointValue_createStateSupplementalQ(Tase2_DataStateSupplemental value, Tase2_DataFlags flags);
TASE2_API Tase2_PointValue
Tase2_PointValue_createRealQTimeTag(float value, Tase2_DataFlags flags, int32_t timeTag);
TASE2_API Tase2_PointValue
Tase2_PointValue_createStateQTimeTag(Tase2_DataFlags valueAndFlags, int32_t timeTag);
TASE2_API Tase2_PointValue
Tase2_PointValue_createDiscreteQTimeTag(int32_t value, Tase2_DataFlags flags, int32_t timeTag);
TASE2_API Tase2_PointValue
Tase2_PointValue_createStateSupplementalQTimeTag(Tase2_DataStateSupplemental value, Tase2_DataFlags flags, int32_t timeTag);
TASE2_API Tase2_PointValue
Tase2_PointValue_createRealExtended(float value, Tase2_DataFlags flags, int32_t timeTag, uint16_t cov);
TASE2_API Tase2_PointValue
Tase2_PointValue_createStateExtended(Tase2_DataFlags valueAndFlags, int32_t timeTag, uint16_t cov);
TASE2_API Tase2_PointValue
Tase2_PointValue_createDiscreteExtended(int32_t value, Tase2_DataFlags flags, int32_t timeTag, uint16_t cov);
TASE2_API Tase2_PointValue
Tase2_PointValue_createStateSupplementalExtended(Tase2_DataStateSupplemental value, Tase2_DataFlags flags, int32_t timeTag, uint16_t cov);
TASE2_API Tase2_PointValue
Tase2_PointValue_createRealQTimeTagExtended(float value, Tase2_DataFlags flags, uint64_t timeTagExtended);
TASE2_API Tase2_PointValue
Tase2_PointValue_createStateQTimeTagExtended(Tase2_DataFlags valueAndFlags, uint64_t timeTagExtended);
TASE2_API Tase2_PointValue
Tase2_PointValue_createDiscreteQTimeTagExtended(int32_t value, Tase2_DataFlags flags, uint64_t timeTagExtended);
TASE2_API Tase2_PointValue
Tase2_PointValue_createStateSupplementalQTimeTagExtended(Tase2_DataStateSupplemental value, Tase2_DataFlags flags, uint64_t timeTagExtended);
TASE2_API float
Tase2_PointValue_getValueReal(Tase2_PointValue self);
TASE2_API void
Tase2_PointValue_setValueReal(Tase2_PointValue self, float value);
TASE2_API int32_t
Tase2_PointValue_getValueDiscrete(Tase2_PointValue self);
TASE2_API void
Tase2_PointValue_setValueDiscrete(Tase2_PointValue self, int32_t value);
TASE2_API Tase2_DataState
Tase2_PointValue_getValueState(Tase2_PointValue self);
TASE2_API void
Tase2_PointValue_setValueState(Tase2_PointValue self, Tase2_DataState value);
TASE2_API Tase2_TimeStampClass
Tase2_PointValue_getTimeStampClass(Tase2_PointValue self);
TASE2_API uint64_t
Tase2_PointValue_getTimeStampEx(Tase2_PointValue self, Tase2_PointValueError *err);
TASE2_API Tase2_DataFlags
Tase2_PointValue_getFlagsEx(Tase2_PointValue self, Tase2_PointValueError *err);
TASE2_API uint16_t
Tase2_PointValue_getCOVEx(Tase2_PointValue self, Tase2_PointValueError *err);